Update installer licensing and branding

--- a/installers-exp/resources/osx_pkg_welcome.rtf.tmpl
+++ b/installers-exp/resources/osx_pkg_welcome.rtf.tmpl
@@ -5,11 +5,11 @@
 \margl1440\margr1440\vieww12040\viewh13780\viewkind0
 \pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
 
-\f0\fs28 \cf0 Thanks for choosing napari v__VERSION__!\
+\f0\fs28 \cf0 Thanks for choosing Spyder v__VERSION__!\
 \
-{\field{\*\fldinst{HYPERLINK "https://napari.org"}}{\fldrslt napari}} is a fast, interactive, multi-dimensional image viewer for Python. It's designed for browsing, annotating, and analyzing large multi-dimensional images.\
+{\field{\*\fldinst{HYPERLINK "https://www.spyder-ide.org"}}{\fldrslt Spyder}} is the Scientific Python Development Environment.\
 \
 The installation will begin shortly.\
 \
-If at any point an error is shown, please save the logs (\uc0\u8984+L) before closing the installer and submit the resulting file along with your report in {\field{\*\fldinst{HYPERLINK "https://github.com/napari/napari/issues"}}{\fldrslt our issue tracker}}. Thank you!\
+If at any point an error is shown, please save the logs (\uc0\u8984+L) before closing the installer and submit the resulting file along with your report in {\field{\*\fldinst{HYPERLINK "https://github.com/spyder-ide/spyder/issues"}}{\fldrslt our issue tracker}}. Thank you!\
 }
